@@ -1,3 +1,9 @@
+2021-08-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCmain.c,
+	  doc/sdccman.lyx:
+	  Macro for calling convention ABI version.
+
 2021-08-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx,
